Nova/Antlr/NovaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from NovaParser.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class NovaParser : Parser {
	public const int
		USING=1, CLASS=2, STRUCT=3, PUBLIC=4, PRIVATE=5, UNIT=6, DOUBLE=7, FLOAT=8, 
		INT=9, SHORT=10, STRING=11, BOOLEAN=12, CHAR=13, BYTE=14, LONG=15, FOR=16, 
		IF=17, WHILE=18, ELSE=19, RETURN=20, NEW=21, NATIVE=22, ASSIGN=23, ADD=24, 
		SUB=25, MUL=26, DIV=27, LE=28, GE=29, GT=30, LT=31, EQUAL=32, NOTEQUAL=33, 
		AND=34, OR=35, LPAREN=36, RPAREN=37, LBRACE=38, RBRACE=39, LBRACK=40, 
		RBRACK=41, COMMA=42, DOT=43, SEMI=44, IDENTIFIER=45, WS=46, COMMENT=47, 
		LINE_COMMENT=48, DECIMAL_LITERAL=49, HEX_LITERAL=50, OCT_LITERAL=51, BINARY_LITERAL=52, 
		FLOAT_LITERAL=53, HEX_FLOAT_LITERAL=54, BOOL_LITERAL=55, CHAR_LITERAL=56, 
		STRING_LITERAL=57, NULL_LITERAL=58;
	public const int
		RULE_compilationUnit = 0, RULE_importDeclaration = 1, RULE_typeDeclaration = 2, 
		RULE_classDeclaration = 3, RULE_structDeclaration = 4, RULE_classBody = 5, 
		RULE_memberDeclaration = 6, RULE_modifier = 7, RULE_classModifier = 8, 
		RULE_fieldDeclaration = 9, RULE_variableDeclarator = 10, RULE_variableInitializer = 11, 
		RULE_variableDeclaratorId = 12, RULE_typeType = 13, RULE_primitiveType = 14, 
		RULE_expression = 15, RULE_methodDeclaration = 16, RULE_typeTypeOrUnit = 17, 
		RULE_formalParameters = 18, RULE_formalParameterList = 19, RULE_formalParameter = 20, 
		RULE_lastFormalParameter = 21, RULE_constructorDeclaration = 22, RULE_methodBody = 23, 
		RULE_block = 24, RULE_localVariableDeclaration = 25, RULE_statement = 26, 
		RULE_forStatement = 27, RULE_parExpression = 28, RULE_forControl = 29, 
		RULE_forInit = 30, RULE_expressionList = 31, RULE_primary = 32, RULE_literal = 33, 
		RULE_integerLiteral = 34, RULE_floatLiteral = 35, RULE_methodCall = 36, 
		RULE_nativeCall = 37, RULE_creator = 38, RULE_createdName = 39, RULE_classCreatorRest = 40, 
		RULE_arguments = 41;
	public static readonly string[] ruleNames = {
		"compilationUnit", "importDeclaration", "typeDeclaration", "classDeclaration", 
		"structDeclaration", "classBody", "memberDeclaration", "modifier", "classModifier", 
		"fieldDeclaration", "variableDeclarator", "variableInitializer", "variableDeclaratorId", 
		"typeType", "primitiveType", "expression", "methodDeclaration", "typeTypeOrUnit", 
		"formalParameters", "formalParameterList", "formalParameter", "lastFormalParameter", 
		"constructorDeclaration", "methodBody", "block", "localVariableDeclaration", 
		"statement", "forStatement", "parExpression", "forControl", "forInit", 
		"expressionList", "primary", "literal", "integerLiteral", "floatLiteral", 
		"methodCall", "nativeCall", "creator", "createdName", "classCreatorRest", 
		"arguments"
	};

	private static readonly string[] _LiteralNames = {
		null, "'using'", "'class'", "'struct'", "'public'", "'private'", "'unit'", 
		"'double'", "'float'", "'int'", "'short'", "'string'", "'bool'", "'char'", 
		"'byte'", "'long'", "'for'", "'if'", "'while'", "'else'", "'return'", 
		"'->'", "'~'", "'='", "'+'", "'-'", "'*'", "'/'", "'<='", "'>='", "'>'", 
		"'<'", "'=='", "'!='", "'&&'", "'||'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "','", "'.'", "';'", null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "USING", "CLASS", "STRUCT", "PUBLIC", "PRIVATE", "UNIT", "DOUBLE", 
		"FLOAT", "INT", "SHORT", "STRING", "BOOLEAN", "CHAR", "BYTE", "LONG", 
		"FOR", "IF", "WHILE", "ELSE", "RETURN", "NEW", "NATIVE", "ASSIGN", "ADD", 
		"SUB", "MUL", "DIV", "LE", "GE", "GT", "LT", "EQUAL", "NOTEQUAL", "AND", 
		"OR", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", 
		"DOT", "SEMI", "IDENTIFIER", "WS", "COMMENT", "LINE_COMMENT", "DECIMAL_LITERAL", 
		"HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", 
		"BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "NULL_LITERAL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "NovaParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public NovaParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompilationUnitContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(NovaParser.Eof, 0); }
		public ImportDeclarationContext[] importDeclaration() {
			return GetRuleContexts<ImportDeclarationContext>();
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return GetRuleContext<ImportDeclarationContext>(i);
		}
		public TypeDeclarationContext[] typeDeclaration() {
			return GetRuleContexts<TypeDeclarationContext>();
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return GetRuleContext<TypeDeclarationContext>(i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterCompilationUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitCompilationUnit(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==USING) {
				{
				{
				State = 84; importDeclaration();
				}
				}
				State = 89;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 93;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << STRUCT) | (1L << SEMI))) != 0)) {
				{
				{
				State = 90; typeDeclaration();
				}
				}
				State = 95;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 96; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportDeclarationContext : ParserRuleContext {
		public ITerminalNode USING() { return GetToken(NovaParser.USING, 0); }
		public ITerminalNode LT() { return GetToken(NovaParser.LT, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(NovaParser.IDENTIFIER, 0); }
		public ITerminalNode GT() { return GetToken(NovaParser.GT, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterImportDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitImportDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public ImportDeclarationContext importDeclaration() {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_importDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; Match(USING);
			State = 99; Match(LT);
			State = 100; Match(IDENTIFIER);
			State = 101; Match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclarationContext : ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return GetRuleContext<ClassDeclarationContext>(0);
		}
		public StructDeclarationContext structDeclaration() {
			return GetRuleContext<StructDeclarationContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(NovaParser.SEMI, 0); }
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterTypeDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitTypeDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclarationContext typeDeclaration() {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_typeDeclaration);
		try {
			State = 108;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case CLASS:
			case STRUCT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 105;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case CLASS:
					{
					State = 103; classDeclaration();
					}
					break;
				case STRUCT:
					{
					State = 104; structDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case SEMI:
				EnterOuterAlt(_localctx, 2);
				{
				State = 107; Match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDeclarationContext : ParserRuleContext {
		public ITerminalNode CLASS() { return GetToken(NovaParser.CLASS, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(NovaParser.IDENTIFIER, 0); }
		public ClassBodyContext classBody() {
			return GetRuleContext<ClassBodyContext>(0);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterClassDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitClassDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public ClassDeclarationContext classDeclaration() {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_classDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; Match(CLASS);
			State = 111; Match(IDENTIFIER);
			State = 112; classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructDeclarationContext : ParserRuleContext {
		public ITerminalNode STRUCT() { return GetToken(NovaParser.STRUCT, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(NovaParser.IDENTIFIER, 0); }
		public ClassBodyContext classBody() {
			return GetRuleContext<ClassBodyContext>(0);
		}
		public StructDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterStructDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitStructDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public StructDeclarationContext structDeclaration() {
		StructDeclarationContext _localctx = new StructDeclarationContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_structDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(STRUCT);
			State = 115; Match(IDENTIFIER);
			State = 116; classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassBodyContext : ParserRuleContext {
		public MemberDeclarationContext[] memberDeclaration() {
			return GetRuleContexts<MemberDeclarationContext>();
		}
		public MemberDeclarationContext memberDeclaration(int i) {
			return GetRuleContext<MemberDeclarationContext>(i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterClassBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitClassBody(this);
		}
	}

	[RuleVersion(0)]
	public ClassBodyContext classBody() {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_classBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118; Match(LBRACE);
			State = 122;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==PUBLIC || _la==PRIVATE) {
				{
				{
				State = 119; memberDeclaration();
				}
				}
				State = 124;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 125; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MemberDeclarationContext : ParserRuleContext {
		public ModifierContext modifier() {
			return GetRuleContext<ModifierContext>(0);
		}
		public MethodDeclarationContext methodDeclaration() {
			return GetRuleContext<MethodDeclarationContext>(0);
		}
		public FieldDeclarationContext fieldDeclaration() {
			return GetRuleContext<FieldDeclarationContext>(0);
		}
		public ConstructorDeclarationContext constructorDeclaration() {
			return GetRuleContext<ConstructorDeclarationContext>(0);
		}
		public MemberDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_memberDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterMemberDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitMemberDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public MemberDeclarationContext memberDeclaration() {
		MemberDeclarationContext _localctx = new MemberDeclarationContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_memberDeclaration);
		try {
			State = 136;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 127; modifier();
				State = 128; methodDeclaration();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 130; modifier();
				State = 131; fieldDeclaration();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 133; modifier();
				State = 134; constructorDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModifierContext : ParserRuleContext {
		public ClassModifierContext classModifier() {
			return GetRuleContext<ClassModifierContext>(0);
		}
		public ModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterModifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitModifier(this);
		}
	}

	[RuleVersion(0)]
	public ModifierContext modifier() {
		ModifierContext _localctx = new ModifierContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_modifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; classModifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassModifierContext : ParserRuleContext {
		public ITerminalNode PUBLIC() { return GetToken(NovaParser.PUBLIC, 0); }
		public ITerminalNode PRIVATE() { return GetToken(NovaParser.PRIVATE, 0); }
		public ClassModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classModifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterClassModifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitClassModifier(this);
		}
	}

	[RuleVersion(0)]
	public ClassModifierContext classModifier() {
		ClassModifierContext _localctx = new ClassModifierContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_classModifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140;
			_la = _input.La(1);
			if ( !(_la==PUBLIC || _la==PRIVATE) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldDeclarationContext : ParserRuleContext {
		public TypeTypeContext typeType() {
			return GetRuleContext<TypeTypeContext>(0);
		}
		public VariableDeclaratorContext variableDeclarator() {
			return GetRuleContext<VariableDeclaratorContext>(0);
		}
		public FieldDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fieldDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterFieldDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitFieldDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public FieldDeclarationContext fieldDeclaration() {
		FieldDeclarationContext _localctx = new FieldDeclarationContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_fieldDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142; typeType();
			State = 143; variableDeclarator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclaratorContext : ParserRuleContext {
		public VariableDeclaratorIdContext variableDeclaratorId() {
			return GetRuleContext<VariableDeclaratorIdContext>(0);
		}
		public ITerminalNode ASSIGN() { return GetToken(NovaParser.ASSIGN, 0); }
		public VariableInitializerContext variableInitializer() {
			return GetRuleContext<VariableInitializerContext>(0);
		}
		public VariableDeclaratorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclarator; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterVariableDeclarator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitVariableDeclarator(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclaratorContext variableDeclarator() {
		VariableDeclaratorContext _localctx = new VariableDeclaratorContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_variableDeclarator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145; variableDeclaratorId();
			State = 148;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ASSIGN) {
				{
				State = 146; Match(ASSIGN);
				State = 147; variableInitializer();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableInitializerContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public VariableInitializerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableInitializer; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterVariableInitializer(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitVariableInitializer(this);
		}
	}

	[RuleVersion(0)]
	public VariableInitializerContext variableInitializer() {
		VariableInitializerContext _localctx = new VariableInitializerContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_variableInitializer);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclaratorIdContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(NovaParser.IDENTIFIER, 0); }
		public VariableDeclaratorIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclaratorId; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterVariableDeclaratorId(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitVariableDeclaratorId(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclaratorIdContext variableDeclaratorId() {
		VariableDeclaratorIdContext _localctx = new VariableDeclaratorIdContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_variableDeclaratorId);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 152; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeTypeContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(NovaParser.IDENTIFIER, 0); }
		public PrimitiveTypeContext primitiveType() {
			return GetRuleContext<PrimitiveTypeContext>(0);
		}
		public TypeTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeType; } }
		public override void EnterRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.EnterTypeType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INovaParserListener typedListener = listener as INovaParserListener;
			if (typedListener != null) typedListener.ExitTypeType(this);
		}
	}
